--- a/src/assets/translations/langs/de.json
+++ b/src/assets/translations/langs/de.json
@@ -1,120 +1,125 @@
 {
     "homescreen": {
         "challengelayerbar": {
-			"btn": {
-				"finish": "Abschliessen",
-				"accomplished": "Challenge gemeistert"
-			},
-			"toast": {
-				"onclick_btn_finish": "Gedrückt halten, um die Challenge abzuschließen",
-				"onabort_imgpicker_share": "Bitte sag Bescheid, wenn du soweit bist!"
-			},
-			"dialog": {
-				"challenge_already_solved": {
-					"title": "Challenge gemeistert",
-					"msg": "Du hast diese Herausforderung bereits abgeschlossen. Bitte warte, bis sich der Sponsor mit dir in Verbindung setzt oder eine neue Herausforderung veröffentlicht wird.",
-					"btn_ok": "OK"
-				},
-				"sponsor_notified": {
-					"title": "Sponsor benachrichtigt",
-					"msg": "Wir haben den Sponsor der aktuellen Herausforderung benachrichtigt! Dieser sollte dich bzgl. Sponsoring demnächst kontaktieren.",
-					"btn_ok": "Super!"
-				},
-				"settings_not_set": {
-					"title": "Einen Moment noch",
-					"msg": "Wir benötigen deine E-Mail Adresse damit dich unsere Sponsoren kontaktieren können.",
-					"btn_ok": "OK"
-				}
-			}
+            "btn": {
+                "finish": "Abschliessen",
+                "accomplished": "Challenge gemeistert"
+            },
+            "toast": {
+                "onclick_btn_finish": "Gedrückt halten, um die Challenge abzuschließen",
+                "onabort_imgpicker_share": "Bitte sag Bescheid, wenn du soweit bist!"
+            },
+            "dialog": {
+                "challenge_already_solved": {
+                    "title": "Challenge gemeistert",
+                    "msg": "Du hast diese Herausforderung bereits abgeschlossen. Bitte warte, bis sich der Sponsor mit dir in Verbindung setzt oder eine neue Herausforderung veröffentlicht wird.",
+                    "btn_ok": "OK"
+                },
+                "sponsor_notified": {
+                    "title": "Sponsor benachrichtigt",
+                    "msg": "Wir haben den Sponsor der aktuellen Herausforderung benachrichtigt! Dieser sollte dich bzgl. Sponsoring demnächst kontaktieren.",
+                    "btn_ok": "Super!"
+                },
+                "settings_not_set": {
+                    "title": "Einen Moment noch",
+                    "msg": "Wir benötigen deine E-Mail Adresse damit dich unsere Sponsoren kontaktieren können.",
+                    "btn_ok": "OK"
+                }
+            }
         },
-		"sponsor_fullpage": {
-			"btn": {
-				"website": "Website",
-				"email": "E-Mail"
-			}
-		}
-    }, 
-	"settingsscreen": {
-		"fullpage": {
-			"intro": "Deine E-Mail Adresse wird benötigt, um dich bzgl. gewonnenen Rabatten, Gutscheinen oder Produkten/Services zu kontaktieren.",
-			"form": {
-				"input_mail": {
-					"lbl": "E-Mail",
-					"placeholder": "Deine E-Mail",
-					"errorMsg": "Bitte gib eine gültige E-Mail an."
-				},
-				"checkbox_dataprivacy": "Ich verstehe und akzeptiere, dass meine E-Mail-Adresse bei erfolgreichem Abschluss einer Herausforderung an den angegebenen Sponsor übermittelt wird.",
-				"btn": {
-					"save": "Speichern"
-				}
-			}
-		}
-	},
-	"basescreen": {
-		"loading": {
-			"preparing": "Preparing..",
-			"not_available": "No data available",
-			"error": "Couldn't load"
-		}
-	},
-	"system": {
-		"tabrouter": {
-			"stackrouters": {
-				"homescreen": {
-					"default": {
-						"btn_rounded": "Feedback"
-					},
-					"home": {
-						"title": "Challenge"
-					},
-					"sponsor": {
-						"title": "Sponsor"
-					}
-				},
-				"settingsscreen": {
-					"default": {
-						"btn_rouned": "Feedback"
-					},
-					"settings": {
-						"title": "Einstellungen"
-					}
-				}
-			}
-		}
-	},
-	"models": {
-		"challenge_category": {
-			"environment": {
-				"descr": "Herausforderungen dieser Kategorie fokussieren sich auf den Schutz der Umwelt."
-			},
-			"health": {
-				"descr": "Herausforderungen dieser Kategorie helfen dir, dir gesündere Verhaltensweisen anzueignen."
-			},
-			"social": {
-				"descr": "Diese Kategorie soll gezielt Spaß machen und sozialen Wert schaffen."
-			}
-		}
-	},
-	"controllers": {
-		"filepicker":{
-			"dialog": {
-				"title": "Beweis es"
-			}
-		},
-		"share": {
-			"dialog": {
-				"title": "Teile via",
-				"msg": "Hey Leute, ich habe die Challenge '{{headline}}' (Gesponsort von '{{sponsorName}}') erfolgreich gelöst, hier der Beweis:"
-			}
-		},
-		"warning": {
-			"dialog": {
-				"no_internet": {
-					"title": "Keine Verbindung", 
-					"msg": "Server nicht erreichbar. Hast du eine Internetverbindung?",
-					"btn_ok": "OK"
-				}
-			}
-		}
-	}
+        "sponsor_fullpage": {
+            "btn": {
+                "website": "Website",
+                "email": "E-Mail"
+            },
+            "headers": {
+                "whySponsor": "Unser Beweggrund",
+                "aboutUs": "Über Uns",
+                "misc": "Wissenswertes"
+            }
+        }
+    },
+    "settingsscreen": {
+        "fullpage": {
+            "intro": "Deine E-Mail Adresse wird benötigt, um dich bzgl. gewonnenen Rabatten, Gutscheinen oder Produkten/Services zu kontaktieren.",
+            "form": {
+                "input_mail": {
+                    "lbl": "E-Mail",
+                    "placeholder": "Deine E-Mail",
+                    "errorMsg": "Bitte gib eine gültige E-Mail an."
+                },
+                "checkbox_dataprivacy": "Ich verstehe und akzeptiere, dass meine E-Mail-Adresse bei erfolgreichem Abschluss einer Herausforderung an den angegebenen Sponsor übermittelt wird.",
+                "btn": {
+                    "save": "Speichern"
+                }
+            }
+        }
+    },
+    "basescreen": {
+        "loading": {
+            "preparing": "Preparing..",
+            "not_available": "No data available",
+            "error": "Couldn't load"
+        }
+    },
+    "system": {
+        "tabrouter": {
+            "stackrouters": {
+                "homescreen": {
+                    "default": {
+                        "btn_rounded": "Feedback"
+                    },
+                    "home": {
+                        "title": "Challenge"
+                    },
+                    "sponsor": {
+                        "title": "Sponsor"
+                    }
+                },
+                "settingsscreen": {
+                    "default": {
+                        "btn_rouned": "Feedback"
+                    },
+                    "settings": {
+                        "title": "Einstellungen"
+                    }
+                }
+            }
+        }
+    },
+    "models": {
+        "challenge_category": {
+            "environment": {
+                "descr": "Herausforderungen dieser Kategorie fokussieren sich auf den Schutz der Umwelt."
+            },
+            "health": {
+                "descr": "Herausforderungen dieser Kategorie helfen dir, dir gesündere Verhaltensweisen anzueignen."
+            },
+            "social": {
+                "descr": "Diese Kategorie soll gezielt Spaß machen und sozialen Wert schaffen."
+            }
+        }
+    },
+    "controllers": {
+        "filepicker": {
+            "dialog": {
+                "title": "Beweis es"
+            }
+        },
+        "share": {
+            "dialog": {
+                "title": "Teile via",
+                "msg": "Hey Leute, ich habe die Challenge '{{headline}}' (Gesponsort von '{{sponsorName}}') erfolgreich gelöst, hier der Beweis:"
+            }
+        },
+        "warning": {
+            "dialog": {
+                "no_internet": {
+                    "title": "Keine Verbindung",
+                    "msg": "Server nicht erreichbar. Hast du eine Internetverbindung?",
+                    "btn_ok": "OK"
+                }
+            }
+        }
+    }
 }
