--- a/src/assets/translations/langs/de.json
+++ b/src/assets/translations/langs/de.json
@@ -56,6 +56,15 @@
                     "save": "Speichern"
                 }
             }
+        },
+        "generalsettings": {
+            "list": {
+                "personal_settings": "Persönliche Daten hinterlegen",
+                "challenge_idea": "Idee für Challenge einreichen",
+                "visit_hp": "Homepage besuchen",
+                "privacy_policy": "Datenschutz",
+                "agb": "AGB"
+            }
         }
     },
     "basescreen": {
